# phrase-labeler

./: .gitignore  EXPERIMENT.MD  MLFLOW.md  README.md  api.py  eval_config.example.json  pyproject.toml  render.yaml  requirements.txt  setup.py  small_eval_config.example.json  small_eval_config.json
categories/: approach.json  default.json  need.json  novelty.json
eval/: README.md  analyze_eval_results.py  eval_harness.py  export_often_wrong_segments_csv.py  log_to_mlflow.py  mlflow_logger.py  run_eval.py
eval/tests/: test_analyze_eval_results.py  test_eval_harness.py  test_export_often_wrong_segments_csv.py
eval_runs/small_eval/20260126_225117_6a7fc30c/: default_gpt-41-mini_t0.2.jsonl  default_gpt-41-mini_t0.2_config.json  default_gpt-41-mini_t0.2_summary.json
examples/: sample_negative_examples.json
phrase_labeler/: __init__.py  analyze_eval_results.py  categories.py  cli.py  eval_harness.py  example.json  mlflow_logger.py  phrase_labeler.py  pipeline.py  prompting.py  requirements.txt
prompts/: best-category-prompt.txt  creative-role-prompt.txt  default.txt  prompt-test-1.txt  simple-prompt.txt  task-based-prompt.txt
prompts/judge/: correct-labels.txt
prompts/multi-label/: hypothesis_ai_prompt.txt  master_prompt.txt
prompts/prompt-set-1/: best-category-prompt.txt  creative-role-prompt.txt  default.txt  role-based-prompt.txt  simple-prompt.txt  task-based-prompt.txt
prompts/prompt-set-2/: closest-match.txt  format-only.txt  reduce-fails.txt  tiny-prompt.txt
prompts/prompt-set-3/: closest-match-singleshot.txt  simple-role-singleshot.txt  simple-role.txt  task-based-singleshot.txt  task-based.txt
prompts/prompt-set-4/: closest-match-singleshot.txt  simple-role-singleshot.txt  task-based-singleshot.txt
prompts/prompt-set-5 copy/: closest-match-singleshot.txt  simple-role-singleshot.txt  task-based-singleshot.txt
prompts/suggest-categories/: system_prompt.txt
scripts/: analyze_eval_results.py  log_to_mlflow.py  run_eval.py
tests/: __init__.py  data.json  kanishks_answers_data.json  smalldata.json  test_analyze_eval_results.py  test_eval_harness.py  test_phrase_labeler.py
