[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phrase-labeler"
version = "0.1.2"
description = "A package to label sentence segments given predefined segment labels using OpenAI API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "openai",
]
authors = [
  { name = "Ziwei Gu", email = "ziweigu@g.harvard.edu" }
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ZiweiGu/GP-TSM"

[project.scripts]
label-phrase = "phrase_labeler.cli:main"

[project.optional-dependencies]
eval = ["tqdm"]
mlflow = ["mlflow"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["phrase_labeler", "phrase_labeler.*"]
